--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="recent-article">
           <h2>Terbaru</h2>
           <ul>
-            <li><a href="#">Kota Bekasi</a></li>
-            <li><a href="#">Kuliner Khas Cirebon</a></li>
+            <li><a href="kota-bekasi.html">Kota Bekasi</a></li>
+            <li><a href="kuliner-cirebon.html">Kuliner Khas Cirebon</a></li>
           </ul>
         </div>
       </div>
